# idacpp

./: BUILDING.md  CMakeLists.txt  LICENSE  README.md  USAGE.md  cpp_highlight_keywords.h  cpp_highlighter.cpp  cpp_highlighter.h  extlang_core.cpp  extlang_core.h  idalib_setup.cpp  idalib_setup.h  install-agent.md  plugin.cpp
examples/: decompile_first.cpp  hello.cpp  list_functions.cpp  list_segments.cpp  xrefs.cpp
plugins/: CMakeLists.txt  README.md
plugins/common/: gen_exports_def.py  idacpp_plugin_helpers.cmake  plugin_api.h
plugins/ida_sdk/: CMakeLists.txt  README.md  ida_sdk.h
plugins/idax/: CMakeLists.txt  README.md  idax_plugin_setup.cpp  idax_plugin_setup.h
plugins/idax/examples/: callers_callees.cpp  database_info.cpp  decompile.cpp  find_calls.cpp  imports.cpp  list_functions.cpp  list_segments.cpp  xrefs_to.cpp
plugins/linux/: CMakeLists.txt  README.md  linux_plugin_setup.cpp  linux_plugin_setup.h
plugins/qt6/: CMakeLists.txt  README.md  qt6_plugin_setup.cpp  qt6_plugin_setup.h
plugins/qt6/examples/: qt_form_builder.cpp  qt_introspect.cpp  qt_list_windows.cpp  qt_widget_explorer.cpp
plugins/template/: CMakeLists.txt  README.md  template_plugin_setup.cpp  template_plugin_setup.h
plugins/winsdk/: CMakeLists.txt  README.md  winsdk_plugin_setup.cpp  winsdk_plugin_setup.h
tools/: idgen.cpp  sync_ida_sdk_headers.py
